[tool.poetry]
name = "The Pensieve"
version = "2.2.0"
description = "Simple bot to show stats and other useful information for Harry Potter: Wizards Unite."
authors = ["Macro303 <jackson.jonah@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
PyInstaller = "^3.6"
"discord.py" = "^1.3.4"
PyYAML = "^5.3.1"
pony = "^0.7.13"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
